<resources>
    <string name="app_name">SPRXS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Divya Prabakaran</string>
    <string name="nav_header_subtitle">divya.test@mailinator.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_my_profile">My Profile</string>
    <string name="menu_home">Home</string>
    <string name="menu_my_ideas">My Ideas</string>
    <string name="menu_create_ideas">Create Idea</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_marketplace">Marketplace</string>
    <string name="menu_search">Search Ideas</string>
    <string name="menu_collaborator_requests">Collaborator Requests</string>
    <string name="menu_my_collaborations">My Collaborations</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_logout">Logout</string>


    <string name="linktocompetition">
        <a href="https://www.sprxs.io/Competition.Rules.html">I want to enter the SPRXS competition for a chance to win £9,250 and have read and accepted the competition rules.</a>
    </string>
    <string name="linktoprivacy">
        <a href="https://www.sprxs.io/Privacy.html">Privacy policy and Terms and Condition.</a>
    </string>


</resources>
