<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_icons8_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_ideas"
            android:icon="@drawable/ic_icons8_innovation"
            android:title="@string/menu_my_ideas" />
        <item
            android:id="@+id/nav_create_ideas"
            android:icon="@drawable/ic_icons8_create"
            android:title="@string/menu_create_ideas" />
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_icons8_envelope"
            android:title="@string/menu_inbox" />

        <!--<item-->
            <!--android:id="@+id/nav_chat"-->
            <!--android:icon="@drawable/ic_icons8_speech"-->
            <!--android:title="@string/menu_chat" />-->

        <!--<item-->
            <!--android:id="@+id/nav_marketplace"-->
            <!--android:icon="@drawable/ic_icons8_search_client"-->
            <!--android:title="@string/menu_marketplace" />-->
        <!--<item-->
            <!--android:id="@+id/nav_search"-->
            <!--android:icon="@drawable/ic_icons8_search"-->
            <!--android:title="@string/menu_search" />-->

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_icons8_sign_out"
            android:title="@string/menu_logout" />
    </group>

    <group android:checkableBehavior="single">

        <item android:title="sample">
            <menu>

            </menu>
        </item>
    </group>



</menu>
